app-infra/jenkins/jenkins-server.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins-server
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-server
  template:
    metadata:
      labels:
        app: jenkins-server
    spec:
      securityContext:
            fsGroup: 1000 
            runAsUser: 1000
      serviceAccountName: jenkins-admin
      containers:
        - name: jenkins
          image: marceloluiz1/jenkins-poc:v1
          resources:
            limits:
              memory: "4Gi"
              cpu: "2000m"
            requests:
              memory: "3Gi"
              cpu: "1000m"
          ports:
            - name: http
              containerPort: 8080
            - name: jnlp
              containerPort: 50000
          livenessProbe:
            httpGet:
              path: "/login"
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/login"
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home
#            - name: jenkins-config
#              mountPath: /var/jenkins_home/config.yaml
#              subPath: config.yaml           
      
#      volumes:
#        - name: jenkins-data
#          emptyDir: {}
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
              claimName: jenkins-pvc
 #       - name: jenkins-config
 #         configMap:
 #           name: jenkins-configmap
