app-infra/jenkins/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-server
  namespace: jenkins
  labels:
    app: jenkins-server
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: jnlp
    port: 50000
    targetPort: 50000
  selector:
    app: jenkins-server
