app-infra/jenkins/jenkins-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins-server
spec: 
  parentRefs:
  - kind: Gateway
    name: external-http
    namespace: gateway
  hostnames:
  - "jenkins.brotherscloud.online"
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: jenkins-server
      port: 8080
